--- a/AdminHW/package.json
+++ b/AdminHW/package.json
@@ -18,6 +18,8 @@
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-document-picker": "^9.1.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.8.2",
